# SPDX-FileCopyrightText: 2021 Michael Webster
# SPDX-FileCopyrightText: 2021 Western Digital Corporation or its affiliates
#
# SPDX-License-Identifier: GPL-3.0-or-later

# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT([mcell-grid-table], [0.1])  # TODO: add email address?
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/mcell-grid-table.lua], [chmod +x src/mcell-grid-table.lua])
AC_OUTPUT
